# VoTE

./: .gitignore  .travis.yml  AUTHORS  Makefile.am  README.md  bootstrap.sh  configure.ac
bindings/python/: Makefile.am  build.py  example.py  setup.py  test.py  vote.py
examples/: Makefile.am  acasxu.c  mnist.c
ext/: Makefile.am
inc/: Makefile.am  vote.h
lib/: Makefile.am  vote_abstract.c  vote_abstract.h  vote_csv.c  vote_dataset.c  vote_ensemble.c  vote_mapping.c  vote_math.h  vote_pipeline.c  vote_pipeline.h  vote_postproc.c  vote_postproc.h  vote_refinary.c  vote_refinary.h  vote_tree.c  vote_tree.h  vote_utils.c  vote_xgboost.c
m4/: ax_python_module.m4
src/: Makefile.am  accuracy.c  cardinality.c  iospace.c  mappings.c  range.c  robustness.c  throughput.c  workqueue.c  workqueue.h  xgbconv.c
support/: collision_detection.sh  mnist-csv-gen.py  mnist.sh  silva2vote.py  train-catboost.py  train-sklearn.py  vote2silva.py
support/data/: collision_detection.train.csv  collision_detection.txt
